--- a/index.html
+++ b/index.html
@@ -24,12 +24,15 @@
       text-align: center;
       text-decoration: none;
     }
+    body a img {
+      max-width: 500px;
+    }
   </style>
 </head>
 
 <body>
   <h1>TOPOLOGICA</h1>
-  <a href="#">
+  <a href="topologica-alpha-1.apk">
   <p><img src="topologica.png"></p>
   <p>Download for Android 5.0+</p>
   </a>
