--- a/howto.html
+++ b/howto.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" type="image/png" href="favicon.png"/>
+  <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
   <title>Topologica | Alpha</title>
   <style>
     body {
@@ -17,11 +17,13 @@
       width:95%;
       margin:auto;
     }
-    body h1 {
-      margin-top:15vh;
-    }
-    h1, p {
+    body h1, h2, h3 {
+      margin-top: 5vh;
       text-align: center;
+    }
+
+    body p {
+      margin-top: 2vh;
     }
     body a {
       color: white;
@@ -35,15 +37,10 @@
 </head>
 
 <body>
-  <h1>TOPOLOGICA</h1>
-  <a href="topologica-alpha-2.apk">
-    <p><img src="topologica.png"></p>
-    <p>Download for Android 5.0+</p>
+  <h1>USING TOPOLOGICA</h1>
+  <p></p>
+  <p></p>
   </a>
-  <p>
-    <!--a href="howto.html">What is Topologica?</a-->
-  </p>
-
 </body>
 
 </html>
