--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" type="image/png" href="favicon.png"/>
-  <title>Topologica | Alpha</title>
+  <title>Topologica | Alpha 5</title>
   <style>
     body {
       color: white;
@@ -36,7 +36,7 @@
 
 <body>
   <h1>TOPOLOGICA</h1>
-  <a href="topologica-alpha-4.apk">
+  <a href="topologica-alpha-5.apk">
     <p><img src="topologica.png"></p>
     <p>Download for Android 5.0+</p>
   </a>
