--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" type="image/png" href="favicon.png"/>
+  <link rel="shortcut icon" type="image/png" href="favicon.png" />
   <title>Topologica</title>
   <style>
     body {
@@ -14,36 +14,63 @@
       align-content: center;
       text-align: center;
     }
-    body > * {
-      width:95%;
-      margin:auto;
+
+    body>* {
+      width: 95%;
+      margin: auto;
     }
+
     body h1 {
-      margin-top:15vh;
+      margin-top: 15vh;
     }
+
     body h2 {
-      margin-top:5vh;
+      margin-top: 5vh;
     }
-    h1, h2, p {
+
+    h1,
+    h2,
+    p {
       text-align: center;
     }
+
     a.download {
       color: white;
       text-align: center;
       text-decoration: none;
       display: -webkit-flex;
       display: flex;
-
-  align-items: center;
-  justify-content: center;
+      align-items: center;
+      justify-content: center;
     }
+
     img.logo {
       max-width: 380px;
       margin: auto;
     }
+
     .screenshots {
       margin-top: 5vh;
       text-align: center;
+      display: -webkit-flex;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-wrap: wrap;
+    }
+
+    .screenshot {
+      display: -webkit-flex;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      margin-left: 1vh;
+      margin-right: 1vh;
+    }
+
+    .screenshot > * {
+      margin-bottom: 3vh;
     }
   </style>
 </head>
@@ -51,10 +78,20 @@
 <body>
   <h1>TOPOLOGICA</h1>
   <img class="logo" src="topologica.png">
-  <h2>Music Editing Made Easy</h2>
+  <h2>Music Made Accessible</h2>
   <div class="screenshots">
-    <img src="instrument_screenshot.png"  width="288px" height="512px" />
-    <img src="sequencer_screenshot.png"  width="288px" height="512px" />
+    <span class="screenshot">
+      <img src="instrument_screenshot.png"  width="288px" height="512px" />
+      <span>Play complex voicings the second you begin</span>
+    </span>
+    <span class="screenshot">
+      <img src="instrument_select_screenshot.png"  width="288px" height="512px" />
+      <span>Use 128 General MIDI instruments</span>
+    </span>
+    <span class="screenshot">
+      <img src="sequencer_screenshot.png"  width="288px" height="512px" />
+      <span>Compose sophisticated music intuitively</span>
+    </span>
   </div>
   <div>
     <a class="download" href="topologica-alpha-7.apk">
@@ -62,7 +99,7 @@
       <span>Download Alpha 7 for Android 6.0+</span>
     </a>
   </div>
-    <!--a href="howto.html">What is Topologica?</a-->
+  <!--a href="howto.html">What is Topologica?</a-->
   </p>
 
 </body>
