--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <span>Download Alpha 7 for Android 6.0+</span>
     </a>
   </div>
-  <div>
+  <!--div>
       <input type="checkbox" id="show-paid-alpha" />
       <label for="show-paid-alpha">View Paid Alpha information</label>
       <div>
@@ -136,8 +136,7 @@
           <span>Download Alpha 7 for Android 6.0+</span>
         </a>
       </div>
-  </div>
-  <!--a href="howto.html">What is Topologica?</a-->
+  </div-->
   </p>
 
 </body>
