--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     </span>
     <span class="screenshot">
       <iframe id="ytplayer" type="text/html" width="288" height="512"
-        src="https://www.youtube.com/embed/FjqRDKMraWo?autoplay=0&origin=http://topologica.co"
+        src="https://www.youtube.com/embed/mpJnb3K7Vko?autoplay=0&origin=http://topologica.co"
         frameborder="0"></iframe>
       <span>3-Minute Demo: Funk in C#m</span>
     </span>
