--- a/index.html
+++ b/index.html
@@ -28,10 +28,25 @@
       margin-top: 5vh;
     }
 
+    body h3 {
+      margin-top: 4vh;
+    }
+
     h1,
-    h2,
-    p {
+    h2 {
       text-align: center;
+    }
+
+    body > p,
+    body > ol {
+      text-align: left;
+      max-width: 700px;
+      margin-top: 3vh;
+    }
+
+    body > ol li {
+      padding-left: 1vh;
+      margin-top: 1vh;
     }
 
     img.logo {
@@ -97,6 +112,48 @@
   <h1>TOPOLOGICA</h1>
   <img class="logo" src="topologica.png">
   <h2>Music Made Accessible</h2>
+  <p>
+    Topologica is <i>not</i> yet another keyboard app. Topologica turns
+    the phone in your pocket into an instrument that can be used to play
+    any song you could want to play, and to make it sound <i>good</i>.
+  </p>
+  <p>
+    Well actually, it's four instruments in one, and each of them can be
+    configured to sound like any one of 128 General MIDI instruments.
+  </p>
+  <p>
+    The goal here is to build both the keytar of the 2010s, and the tool
+    composers plug into their computers to work with the ideas they found
+    during their commutes.
+  </p>
+  <h3>For Non-Musicians</h3>
+  <ol>
+    <li>Open the app and touch everything you see and listen to your sounds.</li>
+    <li>
+      Try playing the green note on the bottom Keyboard, and everything but green
+      on the top board (the Colorboard).
+      <ul>
+        <li>
+          Congratulations: You've learned to play jazz voicings that take pianists
+          years to learn!
+        </li>
+      </ul>
+    </li>
+    <li>
+      Play with the other modes and sounds in the app. In the crazy top navigation,
+      to the right in the middle is generally "forward." But don't be afraid to go
+      backward or diagonally!
+    </li>
+    <li>Keep doing this until you sound good.</li>
+    <li>Watch the people of the gender of your choosing swoon at your suave sounds.</li>
+  </ol>
+  <h3>For Musicians</h3>
+  <p>
+    Get that tune out of your head on your commute. Whip your phone out to show some
+    theory stuff in classes you teach or figure out new harmonies in your own work.
+    Have fun!
+  </p>
+  <h2>Screenshots & Video</h2>
   <div class="screenshots">
     <span class="screenshot">
       <img src="instrument_screenshot.png"  width="288px" height="512px" />
