--- a/index.html
+++ b/index.html
@@ -130,6 +130,10 @@
   <ol>
     <li>Open the app and touch everything you see and listen to your sounds.</li>
     <li>
+      Point your phone up and down &mdash; from the sky to the ground &mdash;
+      to make your sounds higher or lower.
+    </li>
+    <li>
       Try playing the green note on the bottom Keyboard, and everything but green
       on the top board (the Colorboard).
       <ul>
@@ -146,6 +150,18 @@
     </li>
     <li>Keep doing this until you sound good.</li>
     <li>Watch the people of the gender of your choosing swoon at your suave sounds.</li>
+    <li>
+      Look up some chords to songs you like and learn to play them in a way you like.
+      <ul>
+        <li>
+          Note that this may not yet be possible for all songs as this app is still in alpha!
+        </li>
+        <li>
+          But hey, music is all about learning and exploring anyway.
+        </li>
+      </ul>
+    </li>
+    <li>You are now a musician.</li>
   </ol>
   <h3>For Musicians</h3>
   <p>
