--- a/index.html
+++ b/index.html
@@ -38,13 +38,17 @@
     }
 
     body > p,
-    body > ol {
+    body > div {
       text-align: left;
       max-width: 700px;
       margin-top: 3vh;
     }
 
-    body > ol li {
+    body > div > ol {
+      margin-left: -1em;
+    }
+
+    body > div > ol li {
       padding-left: 1vh;
       margin-top: 1vh;
     }
@@ -127,6 +131,7 @@
     during their commutes.
   </p>
   <h3>For Non-Musicians</h3>
+  <div>
   <ol>
     <li>Open the app and touch everything you see and listen to your sounds.</li>
     <li>
@@ -163,6 +168,7 @@
     </li>
     <li>You are now a musician.</li>
   </ol>
+  </div>
   <h3>For Musicians</h3>
   <p>
     Get that tune out of your head on your commute. Whip your phone out to show some
