--- a/index.html
+++ b/index.html
@@ -143,6 +143,11 @@
       on the top board (the Colorboard).
       <ul>
         <li>
+          Scroll the Keyboard all the way to the left/bottom of its range by swiping
+          from its edges, and scroll the Colorboard to the middle of its range (i.e.,
+          tenor range or where people sing) by holding your phone parallel to the ground.
+        </li>
+        <li>
           Congratulations: You've learned to play jazz voicings that take pianists
           years to learn!
         </li>
