Good idea Raleigh!

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 <body>
   <h1>TOPOLOGICA</h1>
   <img class="logo" src="topologica.png">
-  <h2>Music Made Accessible</h2>
+  <h2>Unlock Your Musical Potential</h2>
   <p>
     Topologica is <i>not</i> yet another keyboard app. Topologica turns
     the phone in your pocket into an instrument that can be used to play
