Update for Alpha 8 (Alpha 9 on Play Store)

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
     body h1 {
       margin-top: 15vh;
+      margin-bottom: 5vh;
     }
 
     body h2 {
@@ -254,9 +255,9 @@
     </span>
   </div>
   <div>
-    <a class="download" href="topologica-alpha-7.apk">
+    <a class="download" href="topologica-alpha-8.apk">
       <img style="max-width: 100%" src="topologica-old.png" width="50px" height="50px" />
-      <span>Download Alpha 7 for Android 5.0+</span>
+      <span>Download Alpha 8 for Android 5.0+</span>
     </a>
   </div>
   <div class="paid-alpha-info">
@@ -269,7 +270,7 @@
         </a>
         <a class="download" href="https://play.google.com/store/apps/details?id=com.jonlatane.beatpad">
           <img style="max-width: 100%" src="https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png" width="163px" height="64px" />
-          <span>Step 2: Download Alpha 8 for Android 5.0+ for $1</span>
+          <span>Step 2: Download Alpha 9 for Android 5.0+ for $1</span>
         </a>
       </div>
   </div>
