Update for Alpha 10

--- a/index.html
+++ b/index.html
@@ -255,26 +255,17 @@
     </span>
   </div>
   <div>
-    <a class="download" href="topologica-alpha-8.apk">
-      <img style="max-width: 100%" src="topologica-old.png" width="50px" height="50px" />
-      <span>Download Alpha 8 for Android 5.0+</span>
+    <a class="download" href="topologica-alpha-10.apk">
+      <img style="max-width: 100%; margin-right: 10px;" src="topologica.png" width="50px" height="50px" />
+      <span>Download Alpha 10 free for Android 5.0+</span>
     </a>
   </div>
-  <div class="paid-alpha-info">
-      <input type="checkbox" id="show-paid-alpha" />
-      <label for="show-paid-alpha">View paid alpha information</label>
-      <div class="paid-alpha-details">
-        <a class="download" href="https://play.google.com/apps/testing/com.jonlatane.beatpad">
-          <img style="max-width: 100%" src="topologica.png" width="50px" height="50px" />
-          <span>Step 1: Sign up for the Alpha on Google Play</span>
-        </a>
-        <a class="download" href="https://play.google.com/store/apps/details?id=com.jonlatane.beatpad">
-          <img style="max-width: 100%" src="https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png" width="163px" height="64px" />
-          <span>Step 2: Download Alpha 9 for Android 5.0+ for $1</span>
-        </a>
-      </div>
+  <div>
+    <a class="download" href="https://play.google.com/store/apps/details?id=com.jonlatane.beatpad">
+      <img style="max-width: 100%" src="https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png" width="163px" height="64px" />
+      <span>Download the paid version</span>
+    </a>
   </div>
-  </p>
 
 </body>
 
