--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
 								  configured to sound like any one of 128 General MIDI instruments.
 								</p>
 								<p>
-								  The goal here is to build both the keytar of this millenium, and the tool
-								  composers plug into their computers to work with the ideas they found
-								  during their commutes.
+								  Our goal is to build both the keytar of this millenium and the
+								  ultimate tool for saving your musical discoveries on commutes, flights,
+								  hikes, and any other time the creative urge strikes.
 								</p>
 								<!--ul class="actions">
 									<li><a href="#" class="button big">Full Story</a></li>
