--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 								  any song you could want to play, and to make it sound <i>good</i>.
 								</p>
 								<p>
-								  Well actually, it's four instruments in one, and each of them can be
+								  In fact, it's four instruments in one, and each of them can be
 								  configured to sound like any one of 128 General MIDI instruments.
 								</p>
 								<p>
