--- a/usage.html
+++ b/usage.html
@@ -26,7 +26,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li><a href="index.html">Information</a></li>
+							<li><a href="index.html">Home</a></li>
 							<li class="active"><a href="usage.html">Usage</a></li>
 							<li><a href="https://medium.com/fully-automated-luxury-robot-music">Articles</a></li>
 						</ul>
