--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
 							<article class="post featured">
 								<header class="major">
 									<!--span class="date">April 25, 2017</span-->
-									<h2><a href="#">Unleash your<br />
-									musical potential</a></h2>
+									<h2>Unleash your<br />
+									musical potential</h2>
 								</header>
-								<a href="#" class="image main" style="max-width: 600px; height: auto; margin-left: auto; margin-right: auto;"><img src="images/instrument_screenshot.png" alt="" /></a>
+								<a href="images/instrument_screenshot.png" class="image main" style="max-width: 600px; height: auto; margin-left: auto; margin-right: auto;"><img src="images/instrument_screenshot.png" alt="" /></a>
 								<p>
 								  Topologica is <i>not</i> yet another keyboard app. Topologica turns
 								  the phone in your pocket into an instrument that can be used to play
@@ -110,7 +110,7 @@
 										<!--span class="date">April 24, 2017</span-->
 										<h2>Play complex voicings the second you begin</h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/instrument_screenshot.png" alt="" /></a>
+									<a href="images/instrument_screenshot.png" class="image fit"><img src="images/instrument_screenshot.png" alt="" /></a>
 									<!--ul class="actions">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul-->
@@ -119,13 +119,13 @@
 									<header>
 										<h2>Compose sophisticated music intuitively</h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/sequencer_screenshot.png" alt="" /></a>
+									<a href="images/sequencer_screenshot.png" class="image fit"><img src="images/sequencer_screenshot.png" alt="" /></a>
 								</article>
 								<article>
 									<header>
 										<h2>Use 128 General MIDI instruments</h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/instrument_select_screenshot.png" alt="" /></a>
+									<a href="images/instrument_select_screenshot.png" class="image fit"><img src="images/instrument_select_screenshot.png" alt="" /></a>
 								</article>
 								<article>
 									<header>
@@ -139,7 +139,7 @@
 									<header>
 										<h2>Chromebook support</h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/chromebook_screenshot.png" alt="" /></a>
+									<a href="images/chromebook_screenshot.png" class="image fit"><img src="images/chromebook_screenshot.png" alt="" /></a>
 								</article>
 								<!--article>
 									<header>
