Add screenshot of upcoming functionality

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 									<h2>Unleash your<br />
 									musical potential</h2>
 								</header>
-								<a href="images/instrument_screenshot.png" class="image main" style="max-width: 600px; height: auto; margin-left: auto; margin-right: auto;"><img src="images/instrument_screenshot.png" alt="" /></a>
+								<a href="images/upcoming_feature.png" class="image main" style="max-width: 600px; height: auto; margin-left: auto; margin-right: auto;"><img src="images/upcoming_feature.png" alt="" /></a>
 								<p>
 								  Topologica is <i>not</i> yet another keyboard app. Topologica turns
 								  the phone in your pocket into an instrument that can be used to play
