--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
 								  any song you could want to play, and to make it sound <i>good</i>.
 								</p>
 								<p>
-								  In fact, it's four instruments in one, and each of them can be
+								  In fact it's five instruments in one, all of which can play whatever
+								  you want on top of whatever chords you want, and each of which can be
 								  configured to sound like any one of 128 General MIDI instruments.
 								</p>
 								<p>
