Update screenshots, APK, and do some cleanup

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<p>Unleash Your Musical Potential</p>
 						<ul class="actions">
 							<li>
-								<a class="icon" href="assets/topologica-alpha-10.apk">
+								<a class="icon" href="assets/app-release.apk">
 									<img style="max-width: 100%; margin-right: 10px;" src="images/topologica.png" width="50px" height="50px" />
 									<br/><span>Download Alpha 10 free for Android 5.0+</span>
 								</a>
@@ -90,9 +90,9 @@
 								
 								<ul class="actions">
 									<li>
-										<a class="icon" href="assets/topologica-alpha-10.apk">
+										<a class="icon" href="assets/app-release.apk">
 											<img style="max-width: 100%; margin-right: 10px;" src="images/topologica.png" width="50px" height="50px" />
-											<br/><span>Download Alpha 10 free for Android 5.0+</span>
+											<br/><span>Download v0.7.0 free for Android 5.0+</span>
 										</a>
 									</li>
 									<li>
