--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 								  any song you could want to play, and to make it sound <i>good</i>.
 								</p>
 								<p>
-								  In fact it's five instruments in one, all of which can play whatever
+								  In fact it's eight instruments in one, all of which can play whatever
 								  you want on top of whatever chords you want, and each of which can be
 								  configured to sound like any one of 128 General MIDI instruments.
 								</p>
