--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 									<li>
 										<a class="icon" href="assets/app-release.apk">
 											<img style="max-width: 100%; margin-right: 10px;" src="images/topologica.png" width="50px" height="50px" />
-											<br/><span>Download v0.10.0 free for Android 5.0+</span>
+											<br/><span>Download free for Android 5.0+</span>
 										</a>
 									</li>
 									<li>
