--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Topologica</title>
+		<title>BeatScratch: scratch your beat fast</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,12 +20,12 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Topologica</h1>
-						<p>Unleash Your Musical Potential</p>
+						<h1>BeatScratch</h1>
+						<p>scratch your beat fast</p>
 						<ul class="actions">
 							<li>
 								<a class="icon" href="assets/app-release.apk">
-									<img style="max-width: 100%; margin-right: 10px;" src="images/topologica.png" width="50px" height="50px" />
+									<img style="max-width: 100%; margin-right: 10px;" src="images/beatscratch.png" width="50px" height="50px" />
 									<br/><span>Download free for Android 5.0+</span>
 								</a>
 							</li>
@@ -40,7 +40,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Topologica</a>
+						<a href="index.html" class="logo">BeatScratch</a>
 					</header>
 
 				<!-- Nav -->
@@ -70,7 +70,7 @@
 								</header>
 								<a href="images/upcoming_feature.png" class="image main" style="max-width: 600px; height: auto; margin-left: auto; margin-right: auto;"><img src="images/upcoming_feature.png" alt="" /></a>
 								<p>
-								  Topologica is <i>not</i> yet another keyboard app. Topologica turns
+								  BeatScratch is <i>not</i> yet another keyboard app. BeatScratch turns
 								  the phone in your pocket into an instrument that can be used to play
 								  any song you could want to play, and to make it sound <i>good</i>.
 								</p>
@@ -91,7 +91,7 @@
 								<ul class="actions">
 									<li>
 										<a class="icon" href="assets/app-release.apk">
-											<img style="max-width: 100%; margin-right: 10px;" src="images/topologica.png" width="50px" height="50px" />
+											<img style="max-width: 100%; margin-right: 10px;" src="images/beatscratch.png" width="50px" height="50px" />
 											<br/><span>Download free for Android 5.0+</span>
 										</a>
 									</li>
@@ -118,7 +118,7 @@
 								</article>
 								<article>
 									<header>
-										<h2>Compose sophisticated music intuitively</h2>
+										<h2>Compose music intuitively and quickly</h2>
 									</header>
 									<a href="images/sequencer_screenshot.png" class="image fit"><img src="images/sequencer_screenshot.png" alt="" /></a>
 								</article>
@@ -129,6 +129,13 @@
 									<a href="images/instrument_select_screenshot.png" class="image fit"><img src="images/instrument_select_screenshot.png" alt="" /></a>
 								</article>
 								<article>
+									<header>
+										<h2>Designed for all screen shapes and sizes</h2>
+									</header>
+									<a href="images/landscape_screenshot.png" class="image fit"><img src="images/landscape_screenshot.png" alt="" /></a>
+									<!--a href="images/landscape_screenshot.png" class="image fit"><img src="images/landscape_screenshot.png" alt="" /></a-->
+								</article>
+								<!--article>
 									<header>
 										<h2>3-Minute Demo: Funk in C#m</h2>
 									</header>
@@ -141,7 +148,7 @@
 										<h2>Chromebook support</h2>
 									</header>
 									<a href="images/chromebook_screenshot.png" class="image fit"><img src="images/chromebook_screenshot.png" alt="" /></a>
-								</article>
+								</article-->
 								<!--article>
 									<header>
 										<span class="date">April 7, 2017</span>
