--- a/howto.html
+++ b/howto.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
-  <title>Topologica | Alpha</title>
+  <title>BeatScratch: scratch your beat fast</title>
   <style>
     body {
       color: white;
