--- a/usage.html
+++ b/usage.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Topologica</title>
+		<title>BeatScratch</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,7 +20,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Topologica</a>
+						<a href="index.html" class="logo">BeatScratch</a>
 					</header>
 
 				<!-- Nav -->
