--- a/index.html
+++ b/index.html
@@ -130,10 +130,10 @@
 								</article>
 								<article>
 									<header>
-										<h2>Designed for all screen shapes and sizes</h2>
+										<h2>Designed for all (touch) screen shapes and sizes</h2>
 									</header>
 									<a href="images/landscape_screenshot.png" class="image fit"><img src="images/landscape_screenshot.png" alt="" /></a>
-									<!--a href="images/landscape_screenshot.png" class="image fit"><img src="images/landscape_screenshot.png" alt="" /></a-->
+									<a href="images/tablet_screenshot.png" class="image fit"><img src="images/tablet_screenshot.png" alt="" /></a-->
 								</article>
 								<!--article>
 									<header>
