Better-describe download options

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
 						<ul class="actions">
 							<li>
 								<a class="icon" href="assets/app-release.apk">
-									<img style="max-width: 100%; margin-right: 10px;" src="images/beatscratch.png" width="50px" height="50px" />
-									<br/><span>Download free for Android 5.0+</span>
+									<img style="max-width: 100%; margin-right: 10px;" src="images/beatscratch.png" width="64px" height="64px" />
+									<br/><span>Download free</span>
 								</a>
 							</li>
 							<li>
 								<a class="icon" href="https://play.google.com/store/apps/details?id=com.jonlatane.beatpad">
 								  <img style="max-width: 100%" src="https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png" width="163px" height="64px" />
-								  
+								  <br/><span>Automatic updates for $1</span>
 								</a>
 							</li>
 						</ul>
@@ -91,14 +91,14 @@
 								<ul class="actions">
 									<li>
 										<a class="icon" href="assets/app-release.apk">
-											<img style="max-width: 100%; margin-right: 10px;" src="images/beatscratch.png" width="50px" height="50px" />
-											<br/><span>Download free for Android 5.0+</span>
+											<img style="max-width: 100%; margin-right: 10px;" src="images/beatscratch.png" width="64px" height="64px" />
+											<br/><span>Download free</span>
 										</a>
 									</li>
 									<li>
 										<a class="icon" href="https://play.google.com/store/apps/details?id=com.jonlatane.beatpad">
-										<img style="max-width: 100%" src="https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png" width="163px" height="64px" />
-										
+										  <img style="max-width: 100%" src="https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png" width="163px" height="64px" />
+										  <br/><span>Automatic updates for $1</span>
 										</a>
 									</li>
 								</ul>
