update copy a bit

--- a/index.html
+++ b/index.html
@@ -80,9 +80,10 @@
 								  configured to sound like any one of 128 General MIDI instruments.
 								</p>
 								<p>
-								  Our goal is to build both the keytar of this millenium and the
-								  ultimate tool for saving your musical discoveries on commutes, flights,
-								  hikes, and any other time the creative urge strikes.
+									BeatScratch is built to be the only MIDI drum and backing track controller
+									you'll ever need, with a UI that lets you compose your ideas on your
+									phone faster than you'll be able to learn to play them on your 
+									instrument.
 								</p>
 								<!--ul class="actions">
 									<li><a href="#" class="button big">Full Story</a></li>
