oops guess you can't download aab files

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<p>scratch your beat fast</p>
 						<ul class="actions">
 							<li>
-								<a class="icon" href="assets/app.aab">
+								<a class="icon" href="assets/app-release.apk">
 									<img style="max-width: 100%; margin-right: 10px;" src="images/beatscratch.png" width="64px" height="64px" />
 									<br/><span>Download free</span>
 								</a>
@@ -91,7 +91,7 @@
 								
 								<ul class="actions">
 									<li>
-										<a class="icon" href="assets/app.aab">
+										<a class="icon" href="assets/app-release.apk">
 											<img style="max-width: 100%; margin-right: 10px;" src="images/beatscratch.png" width="64px" height="64px" />
 											<br/><span>Download free</span>
 										</a>
